# rustycord

./: 404.html  CHANGELOG.md  CHANGELOG.md.bak  CNAME  CONTRIBUTING.md  Cargo.toml  Cargo.toml.bak  LICENSE  Makefile  PROGRESS.md  README.md  docs-warning.html  index.html  mkdocs.yml  sitemap.xml
api/client/: index.html
architecture/: index.html
architecture-summary/: index.html
assets/: index.html
assets/stylesheets/: extra.css
development-status/: index.html
docs/: CNAME  assets.md  development-status.md  index.md  troubleshooting.md
docs/api/: client.md
docs/examples/: basic-bot.md  embeds.md  logging.md  message-handler.md
docs/getting-started/: first-bot.md  installation.md
docs/user-guide/: bot-basics.md  prefix-commands.md
examples/basic/: Cargo.toml
examples/basic-bot/: index.html
examples/basic/src/: main.rs
examples/embeds/: index.html
examples/logging/: index.html
examples/message-handler/: index.html
examples/message_handler/: Cargo.toml
examples/message_handler/src/: main.rs
examples/prefix_commands/: .env.example  Cargo.toml  README.md
examples/prefix_commands/src/: main.rs
getting-started/first-bot/: index.html
getting-started/installation/: index.html
images/architecture-diagrams/: index.html
overrides/: main.html
rustcord/: Cargo.toml
rustcord/src/: bot.rs  client.rs  embeds.rs  http.rs  lib.rs  logger.rs  wsocks.rs
rustcord/src/gateway/: gateway.rs  intents.rs  shard_manager.rs
rustcord/src/handlers/: mod.rs
rustcord/src/models/: user.rs
scripts/: release.sh
search/: search_index.json
src/: application.rs  bot.rs  client.rs  embeds.rs  http.rs  lib.rs  logger.rs  main.rs  message.rs  prefix.rs  response.rs  user.rs
src/gateway/: gateway.rs  mod.rs  response.rs
src/handlers/: event_dispatcher.rs  message_handler.rs
src/models/: user.rs
troubleshooting/: index.html
user-guide/bot-basics/: index.html
user-guide/prefix-commands/: index.html
