[package]
name = "rustcord"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
chrono = "0.4.38"
fern = { version = "0.6.2", features = ["chrono", "colored"] }
flate2 = { version = "1.0.34", features = ["zlib"] }
futures = "0.3.31"
log = "0.4.22"
os_info = "3.8.2"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls", "url"] }
