[package]
name = "rustycord"
version = "0.1.5"
edition = "2021"
description = "A fast, lightweight, and feature-rich Discord bot library written in Rust."
license = "MIT"
repository = "https://github.com/iamdhakrey/rustycord"
documentation = "https://rustycord.iamdhakrey.dev"
keywords = ["discord", "bot", "api", "async", "development"]
categories = ["api-bindings", "asynchronous", "development-tools"]
readme = "README.md"

[dependencies]
async-trait = "0.1"
chrono = "0.4.38"
fern = { version = "0.7.1", features = ["chrono", "colored"] }
flate2 = { version = "1.0.34", features = ["zlib"] }
futures = "0.3.31"
log = "0.4.22"
os_info = "3.8.2"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls", "url"] }
