[package]
name = "rustcord-test"
version = "0.1.0"
edition = "2021"

[dependencies]
flate2 = { version = "1.0.34", features = ["zlib"] }
futures = "0.3.31"
reqwest = "0.12.8"
rustcord = { path = "../../rustcord" }
tokio = { version = "1.40.0", features = ["full"] }
tungstenite = { version = "0.23.0", features = ["native-tls"] }
websocket = "0.27.1"
websockets = "0.3.0"
